DTTSB-1297: Fix alignment

--- a/sass/drupal-hacks.scss
+++ b/sass/drupal-hacks.scss
@@ -62,3 +62,8 @@
     padding: 0;
   }
 }
+
+// Publication listing hack.
+.field--publication-listing-exposed {
+  margin-top: 43px;
+}
